--- a/.github/workflow/checkstyle.yml
+++ b/.github/workflow/checkstyle.yml
@@ -1,22 +1,31 @@
-name: Checkstyle Validation
+name: Check Code Style
 
-on: [pull_request]
+on:
+  pull_request:
+    branches:
 
 jobs:
   checkstyle:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      # Шаг 1: Клонирование репозитория
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Шаг 2: Установка JDK 21
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: Run Checkstyle
+      # Шаг 3: Установка зависимостей и компиляция проекта
+      - name: Install dependencies and compile
         run: |
-          # Для Maven
+          mvn clean compile
+
+      # Шаг 4: Проверка стиля кода с помощью Checkstyle
+      - name: Run Maven Checkstyle
+        run: |
           mvn checkstyle:check
-          
-          # Или для Gradle
-          ./gradlew checkstyleMain
