--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
   datasource:
     username: "dbuser"
     password: "12345"
-    url: "jdbc:postgresql://localhost:5432/shareIt"
+    url: "jdbc:postgresql://localhost:5432/shareit"
     driver-class-name: "org.postgresql.Driver"
 
 
