Вернуть контроллеры в сервер

--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -16,5 +16,5 @@ spring:
   datasource:
     username: "dbuser"
     password: "12345"
-    url: "jdbc:postgresql://localhost:5432/shareIt"
+    url: "jdbc:postgresql://localhost:5432/shareit"
     driver-class-name: "org.postgresql.Driver"
